name:                arcola
version:             0
synopsis:            A barebone network servers
description:         Arcola is sublabel of warp. Let's you write simple, non-HTTP servers.
homepage:            https://github.com/futurice/haskell-neleus
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Futurice
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4
  GHC==7.10.3
  GHC==8.0.2
  GHC==8.2.1

source-repository head
  type:      git
  location:  https://github.com/futurice/haskell-neleus.git

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Network.Arcola
  build-depends:
    base >=4.7 && <4.11,
    bytestring,
    streaming-commons,
    network

executable arcola-echo
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      echo
  main-is:             Main.hs
  build-depends:
    base,
    bytestring,
    arcola
