name:                eldapo
version:             0
synopsis:            An LDAP server
description:
  An LDAP server framework, where the logic is made by the user.
  .
  There is also an <https://github.com/slomo/eldapo Erlang project of the same name>,
  the status of both is the same: /Working yet: Nothing/.
homepage:            https://github.com/futurice/haskell-neleus
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Futurice
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4
  GHC==7.10.3
  GHC==8.0.2
  GHC==8.2.1

source-repository head
  type:      git
  location:  https://github.com/futurice/haskell-neleus.git

library 
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Eldapo
  build-depends:
    base >=4.7 && <4.11,
    arcola,
    attoparsec,
    base-compat,
    base16-bytestring,
    bytestring,
    containers,
    free,
    neleus,
    neleus-ldap,
    semigroupoids,
    recursion-schemes
  if !impl(ghc >= 8.0)
    build-depends:
      semigroups >=0.18.3  && <0.19

executable eldapo
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:
    base,
    eldapo
