name:                neleus-ldap
version:             0
synopsis:            LDAP types for neleus
description:         
  LDAP TBW etc. abcdefg.
  .
  TBW. Lorem isum
homepage:            https://github.com/futurice/haskell-neleus
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Futurice
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4
  GHC==7.10.3
  GHC==8.0.2
  GHC==8.2.1

source-repository head
  type:      git
  location:  https://github.com/futurice/haskell-neleus.git

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Neleus.LDAP
  build-depends:
    base >=4.7 && <4.11,
    neleus,
    containers,
    bytestring
